# jxtd

./: CMakeLists.txt  Cargo.toml  README.md  WORKSPACE
cmake/: gflags-2.2.2.cmake  gtest-1.12.0.cmake  opencv-4.6.0.cmake  openssl-3.0.9.cmake  protobuf-3.21.12.cmake  sqlite3-3.11.0.cmake  workflow-0.10.4.cmake
computation/: CMakeLists.txt
computation/datatransfer/: CMakeLists.txt  client_task.cc  client_task.h  test_callback.cc  test_client.cc
computation/drccp/: CMakeLists.txt  drccp13.proto  message.cc  message.h  server.cc  server.h  test_multiserver.cc  test_offlineserver.cc  test_standalone.cc
computation/engine/: CMakeLists.txt  Engine.cc  Engine.h  test_engine.cc
computation/infer/: CMakeLists.txt  SubmitData.proto  Tensor.cc  Tensor.h  infer.cc  infer.h  test_infer.cc  test_tensor.cc
computation/taskdep/: CMakeLists.txt  taskdep.cc  taskdep.h  test_taskdep.cc
dadga/: Cargo.toml
dadga/src/: adapter.rs
docs/: buildinfo.md  ccache.md  development.md  localrepo.md  protolib.md  scripts.md  style.md
engug/: Cargo.toml
engug/src/: ir.rs  lib.rs  parser.rs  test.edc  test_writer.edt  transform.rs  writer.rs
management/: CMakeLists.txt
management/datasource/: CMakeLists.txt  DataSourceList.cc  DataSourceList.h  DataSourceServer.cc  DataSourceServer.h
management/inferprovider/: CMakeLists.txt  task.cc  task.h  test_task.cc
management/taskdep/: CMakeLists.txt  taskdep.cc  taskdep.h  test_taskdep.cc
misc/: CMakeLists.txt
misc/adapter/: noncopy.h
misc/crypto/: AsymmeticChiper.cc  AsymmeticChiper.h  CMakeLists.txt  Chiper.cc  Chiper.h  DigestChiper.cc  DigestChiper.h  RandomGenerator.cc  RandomGenerator.h  SymmeticChiper.cc  SymmeticChiper.h  test_chiper.cc
misc/cv/: CMakeLists.txt  Compose.cc  Compose.h  Transforms.cc  Transforms.h  test_trans.cc
misc/cv/internal/: CMakeLists.txt  ImagePrc.cc  ImagePrc.h  TRANSFORMERS  test_base.cc
misc/dboperator/: CMakeLists.txt  sqliteConnector.cpp  sqliteConnector.h  sqliteUtil.cpp  sqliteUtil.h  test_sql.cpp
misc/flags/: CMakeLists.txt  flag.cc  flag.h
misc/parser/: CMakeLists.txt  Parser.h
misc/parser/at/: ATParser.cc  ATParser.h  CMakeLists.txt  C_ATMessage.h  action.c  action.h  config.y  test_ATParser.cc  token.l
misc/protocol/: protocol.h
nvr/: CMakeLists.txt
nvr/datasource/: CMakeLists.txt  Registry.cc  Registry.h  test_datasource_registry.cc
nvr/onvif/: CMakeLists.txt  adapter.cc  adapter.h  server.cc  server.h  test_onvifforward_mock.cc
proto/: CMakeLists.txt
proto/datasource/: CMakeLists.txt  ProtocolMessage.proto  message.h  request.cc  response.cc
proto/datatransfer/: CMakeLists.txt  ProtocolMessage.proto  message.cc  message.h
proto/onvif/: CMakeLists.txt  jxtd.proto.onvif.proto  message.cc  message.h
proto/taskdep/: CMakeLists.txt  message.cc  message.h  taskdep_message.proto  test_endpoint.cc
renob/: Cargo.toml
router/lib/: CMakeLists.txt  cmd.cc  cmd.h  test_cmd.cc
router/lib/flag/: flag.h
script/: buildinfo.cmake  ccache.cmake  config.h.in  localrepo-build.cmake.in  localrepo.cmake  protolib.cmake
storage/: CMakeLists.txt
storage/datamanagement/: CMakeLists.txt  datamanagement.cc  datamanagement.h  test_datamanagement.cc
storage/datatrans/: CMakeLists.txt  DatatranServer.cc  DatatranServer.h  test_DatatranServer.cc
storage/fs/: CMakeLists.txt
storage/fs/local/: CMakeLists.txt  Fileoperations.cc  Fileoperations.h
storage/fs/scheduler/: CMakeLists.txt  Scheduler.cc  Scheduler.h  test_scheduler.cc
storage/taskdep/: CMakeLists.txt  pairhash.h  taskdep.cc  taskdep.h  test_taskdep.cc
vendors/opencv-4.6.0/.pc/: applied-patches
vendors/opencv-4.6.0/cmake/: OpenCVDownload.cmake
vendors/opencv-4.6.0/patches/: 0000-opencv-4.6.0-disabledownload.patch
vendors/sqlite3-3.11.0/: Makefile  config.status  configure  configure.ac  libtool  sqlite3.pc
vendors/workflow-0.10.4/_lib/: libworkflow.so.0.10.4
vendors/workflow-0.10.4/src/: CMakeLists.txt
