cmake_minimum_required(VERSION 3.16)
project(jxtd)

option(DEBUG_SYMBOLS "debug symbols" OFF)
option(BUILD_TESTS "build tests" ON)
option(BUILD_RELEASE "build release type" OFF)

if(DEBUG_SYMBOLS)
    add_compile_options(-g -ggdb)
endif()
if(BUILD_RELEASE)
    add_compile_options(-O3)
    add_definitions(-DNDEBUG)
endif()
if(BUILD_TESTS)
    enable_testing()
endif()
add_compile_options(-std=c++17 -fno-strict-aliasing)
include(script/protolib.cmake)
include(script/ccache.cmake)
include(script/localrepo.cmake)
include(script/buildinfo.cmake)
write_buildinfo()
include(cmake/protobuf-3.21.12.cmake)
include(cmake/gtest-1.12.0.cmake)
include(cmake/workflow-0.10.4.cmake)
include(cmake/opencv-4.6.0.cmake)
include(cmake/openssl-3.0.9.cmake)
include(cmake/gflags-2.2.2.cmake)
include(cmake/sqlite3-3.11.0.cmake)
include_directories(${PROJECT_SOURCE_DIR})
add_subdirectory(computation)
add_subdirectory(dispatcher)
add_subdirectory(management)
add_subdirectory(misc)
add_subdirectory(nvr)
add_subdirectory(proto)
add_subdirectory(storage)
add_subdirectory(router)
